Fixed the broken CSS for the create-idea page

--- a/7Workshop-SPA/SoftTerest/styles/ideas.css
+++ b/7Workshop-SPA/SoftTerest/styles/ideas.css
@@ -8,10 +8,19 @@
   width: 350px;
 }
 
-.responsive-ideas {
+/*! for some reason, the css broke at a moment, and the image didn't take up the page 
+almost to the bottom, but was now in its original size instead => I fixed the css with the bottom one */
+/* .responsive-ideas {
   width: 100%;
   max-width: 400px;
   height: auto;
+} */
+
+.responsive-ideas {
+  width: 120%;
+  max-width: 2000px;
+  height: 85%;
+  transform: translateX(-45px);
 }
 
 textarea.form-control {
@@ -102,7 +111,3 @@ textarea.form-control {
 .detb {
   margin: 10px;
 }
-
-/* .test-class {
-  position: fixed;
-} */
